kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "bet--virtual-service-gateway"
spec:
  hosts:
    - "*"
  gateways:
    - "bet-vs-gateway"
  http:
    - match:
        - uri:
            prefix: /api/championships
      route:
        - destination:
            host: "championships"
            port:
              number: 9999
    - match:
        - uri:
            prefix: /api/bets
      route:
        - destination:
            host: "bets"
            port:
              number: 9999
    - match:
        - uri:
            prefix: /api/matches
      route:
        - destination:
            host: "matches"
            port:
              number: 9999
    - match:
        - uri:
            prefix: /api/players
      route:
        - destination:
            host: "players"
            port:
              number: 9999
